# GroundedCounselling

./: .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  commitlint.config.cjs  package.json  pnpm-lock.yaml  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labels.yml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  feature.md  feature_request.md  spike.md
.github/seeds/: issues.yml
.github/workflows/: api-ci.yml  api-reusable.yml  ci-all.yml  core-api-ci.yml  core-api-extended-ci.yml  core-api-lite-ci.yml  label-sync.yml  sdk-sync.yml  seed.yml  setup-seed.yml  specialist-filter-matrix.yml  specialization-parity.yml  web-ci.yml  web-reusable.yml
apps/web/: .env.example  .eslintrc.cjs  jest.config.js  next.config.js  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/web/__tests__/components/ui/: LoadingSpinner.test.tsx
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/account/: page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/auth/2fa/: page.tsx
apps/web/app/auth/signin/: page.tsx
apps/web/app/auth/signup/: page.tsx
apps/web/app/blog/: page.tsx
apps/web/app/book/: page.tsx
apps/web/app/cms/: page.tsx
apps/web/app/services/: page.tsx
apps/web/app/specialists/: page.tsx
apps/web/app/specialists/[id]/: page.tsx
apps/web/components/ui/: LoadingSpinner.tsx
apps/web/e2e/: homepage.spec.ts
db/seeds/: README.md  initial_data.sql
docs/api/: README.md
docs/compliance/: readiness.md
docs/design/: system.md
docs/engineering/: ADR-000-bootstrap.md  ci-quickstart.md  ci.md
docs/product/: PRD.md
infra/docker/: README.md  api.Dockerfile  docker-compose.yml  init-db.sql  web.Dockerfile  worker.Dockerfile
services/api/: .env.example  README.md  alembic.ini  generate_openapi.py  pyproject.toml  requirements.txt
services/api/alembic/: README  env.py
services/api/alembic/versions/: 0001_initial.py  0003_create_specialization_tables.py  0004_backfill_specializations.py  0005_add_specspec_specialist_index.py  0006_drop_specialist_json_field_placeholder.py  0007_drop_specialist_json_column.py  323c08db1e6f_add_specialist_booking_session_models.py
services/api/app/: __init__.py  main.py
services/api/app/api/v1/routers/: auth.py  bookings.py  specialists.py  users.py
services/api/app/core/: config.py  rbac.py  security.py
services/api/app/db/: base.py  session.py
services/api/app/models/: __init__.py  audit_log.py  availability.py  booking.py  session.py  specialist.py  specialization.py  user.py
services/api/app/observability/: logging.py  sentry.py
services/api/app/routers/: auth.py  availability.py  bookings.py  sessions.py  specialists.py
services/api/app/schemas/: __init__.py  auth.py  availability.py  booking.py  session.py  specialist.py  user.py
services/api/app/security/: auth.py  password.py
services/api/app/services/: availability.py  booking.py  session.py  specialist.py
services/api/app/services/cache/: specialization_cache.py
services/api/scripts/: check_specialization_parity.py  generate_parity_sparkline.py  prestart.sh
services/api/src/api/: __init__.py  config.py  db.py  main.py
services/api/src/api/observability/: __init__.py  logging.py  sentry.py
services/api/src/api/routers/: __init__.py  auth.py
services/api/tests/: test_main.py  test_migration_placeholder.py  test_password.py  test_security.py  test_specialist_filtering.py  test_sync_specializations.py
services/worker/: .env.example  README.md  pyproject.toml  requirements.txt
services/worker/worker/: __init__.py  config.py  logging_setup.py  main.py
services/worker/worker/tasks/: __init__.py  email.py  notifications.py  reports.py  sms.py
