[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grounded-counselling-worker"
version = "0.1.0"
description = "Background worker for GroundedCounselling"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "GroundedCounselling Team", email = "dev@groundedcounselling.com"}
]

dependencies = [
    "rq>=1.15.1",
    "redis>=5.0.1",
    "httpx>=0.25.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "sentry-sdk>=1.39.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.8",
    "black>=23.11.0",
    "mypy>=1.7.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E", "W", "F", "I", "B", "C4", "UP"
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]